# waltermas

./: CNAME  actualizar.sh  base.html  generar_index_jinja.py  index.html  index_template.html  pyproject.toml
posts/: arch-basics.html  arch-basics.md  base.html  bat-exa.html  bat-exa.md  copyq.html  copyq.md  docker-config.html  docker-config.md  generar_post.py  git.html  git.md  gnome.html  gnome.md  html-basics.html  html-basics.md  manjaro-rescue.html  manjaro-rescue.md  nvim.html  nvim.md  poetry.md  post_template.html  ssh.html  ssh.md  storing-config-files.html  storing-config-files.md  write-iso-to-usb.html  write-iso-to-usb.md
