[tool.poetry]
name = "waltermastk"
version = "0.1.0"
description = ""
authors = ["waltermas <walterjmas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.1"
Pygments = "^2.10.0"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
